# sight

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  new_uncrustify.cfg
apps/dicomxplorer/: CMakeLists.txt
cmake/conan/: conan-deps.cmake  conan.cmake
cmake/doxygen/: doxygen_generator.cmake
cmake/install/: helper.cmake  (+3 more)
fwlauncher/: Properties.cmake
libs/filter/image/: AutomaticRegistration.cpp  AutomaticRegistration.hpp  BresenhamLine.cpp  BresenhamLine.hpp  CMakeLists.txt  Flipper.cpp  Flipper.hpp  Image.cpp  Image.hpp  ImageDiff.cpp  ImageDiff.hpp  ImageExtruder.cpp  ImageExtruder.hpp  ItkImageCaster.hpp  Labeling.cpp  Labeling.hpp  LineDrawer.cpp  LineDrawer.hpp  MIPMatchingRegistration.hpp  MatrixRegressor.cpp  MatrixRegressor.hpp  MinMaxPropagation.cpp  MinMaxPropagation.hpp  PowellOptimizer.cpp  PowellOptimizer.hpp  README.md  Resampler.cpp  Resampler.hpp  SpheroidExtraction.cpp  SpheroidExtraction.hpp  filters.hpp
libs/filter/image/test/: CMakeLists.txt
libs/filter/image/test/tu/: BresenhamLineTest.cpp  BresenhamLineTest.hpp  FlipTest.cpp  FlipTest.hpp  ImageDiffTest.cpp  ImageDiffTest.hpp  ImageExtruderTest.cpp  ImageExtruderTest.hpp  ImageTest.cpp  ImageTest.hpp  LabelingTest.cpp  LabelingTest.hpp  LineDrawerTest.cpp  LineDrawerTest.hpp  MIPMatchingRegistrationTest.cpp  MIPMatchingRegistrationTest.hpp  MatrixRegressorTest.cpp  MatrixRegressorTest.hpp  MinMaxPropagationTest.cpp  MinMaxPropagationTest.hpp  PowellOptimizerTest.cpp  PowellOptimizerTest.hpp  ResamplerTest.cpp  ResamplerTest.hpp  SpheroidExtractionTest.cpp  SpheroidExtractionTest.hpp
libs/filter/imageItk/: AutomaticRegistration.cpp  AutomaticRegistration.hpp  CMakeLists.txt  Flipper.cpp  Flipper.hpp  ItkImageCaster.hpp  Labeling.cpp  Labeling.hpp  MIPMatchingRegistration.hpp  MatrixRegressor.cpp  MatrixRegressor.hpp  Metric.hpp  MinMaxPropagation.cpp  MinMaxPropagation.hpp  PowellOptimizer.cpp  PowellOptimizer.hpp  README.md  Resampler.cpp  Resampler.hpp  SpheroidExtraction.cpp  SpheroidExtraction.hpp  filters.hpp  filters.hxx
libs/filter/imageItk/test/: CMakeLists.txt
libs/filter/imageItk/test/tu/: FlipTest.cpp  FlipTest.hpp  LabelingTest.cpp  LabelingTest.hpp  MIPMatchingRegistrationTest.cpp  MIPMatchingRegistrationTest.hpp  MatrixRegressorTest.cpp  MatrixRegressorTest.hpp  MinMaxPropagationTest.cpp  MinMaxPropagationTest.hpp  PowellOptimizerTest.cpp  PowellOptimizerTest.hpp  ResamplerTest.cpp  ResamplerTest.hpp  SpheroidExtractionTest.cpp  SpheroidExtractionTest.hpp  helper.hpp
libs/io/fwPacsIO/: CMakeLists.txt  Properties.cmake
modules/filter/imageItk/: CMakeLists.txt  Plugin.cpp  Plugin.hpp  README.md  SAutomaticRegistration.cpp  SAutomaticRegistration.hpp  SBitwiseAnd.cpp  SBitwiseAnd.hpp  SFlip.cpp  SFlip.hpp  SImageCenter.cpp  SImageCenter.hpp  SImagesSubstract.cpp  SImagesSubstract.hpp  SLabelGeometryImage.cpp  SLabelGeometryImage.hpp  SLabelImageToBinaryImage.cpp  SLabelImageToBinaryImage.hpp  SMIPMatchingRegistration.cpp  SMIPMatchingRegistration.hpp  SMatrixRegressor.cpp  SMatrixRegressor.hpp  SPlaneSlicer.cpp  SPlaneSlicer.hpp  SPropagator.cpp  SPropagator.hpp  SResampler.cpp  SResampler.hpp
modules/filter/imageItk/rc/: plugin.xml
(+3211 files in other folders)
